src/objects/Information_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Acquiree_App_ID__c</fullName>
        <label>Acquiree App ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquiree_Contract_ID__c</fullName>
        <label>Acquiree Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquiree_Functional_Group__c</fullName>
        <label>Acquiree Functional Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>Clinical Ops</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT Security</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Pharma Ops</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Tech Ops - Pharma Ops</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquiree_IT_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquiree IT Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Amendment_Misc__c</fullName>
        <label>Addendum/Amendment/Misc.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Disposition_Status__c</fullName>
        <label>App Disposition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Decommissioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Disposition_Timeframe__c</fullName>
        <label>App Disposition Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Retention_Decision__c</fullName>
        <label>App Retention Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full App Retirement</fullName>
                </value>
                <value>
                    <fullName>Retain App In Place</fullName>
                </value>
                <value>
                    <fullName>Retire with Data Archive to PFE</fullName>
                </value>
                <value>
                    <fullName>Retire with Data Migration to PFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Retention_Rationale__c</fullName>
        <label>App Retention Rationale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <label>Application Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Benchtop</fullName>
                </value>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Subscription-based</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Application URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authentication_Type__c</fullName>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baseline_Retirement_Plan__c</fullName>
        <label>Baseline Retirement Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COTS_Homegrown__c</fullName>
        <label>COTS/ Homegrown</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COTS</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ACD_BT_Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ACD BT Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Application_Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Application Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_BT_Application_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client BT Application Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_BT_Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client BT Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_BT_Lead_Email1__c</fullName>
        <label>Client BT Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_BT_Lead_Email__c</fullName>
        <formula>Client_BT_Lead1__r.Email</formula>
        <label>Client BT Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Business_Process_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Business Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Contract_Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contract Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Information_Sources6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Equivalent_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Equivalent App</label>
        <referenceTo>Information_Landscape__c</referenceTo>
        <relationshipLabel>Information Sources (Client Equivalent App)</relationshipLabel>
        <relationshipName>Information_Sources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Functional_Area__c</fullName>
        <label>Client Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Pharm Sci</fullName>
                </value>
                <value>
                    <fullName>PDM</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>eLibrary</fullName>
                </value>
                <value>
                    <fullName>Business Insights</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Functional_Group__c</fullName>
        <label>Client Functional Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Pharm Sci</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Decision_Contract_Integration_D__c</fullName>
        <label>Contract Decision/Contract Integration D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep until Contract End</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Specific_Type__c</fullName>
        <label>Contract Specific Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Termination_Date__c</fullName>
        <label>Contract Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contracts__c</referenceTo>
        <relationshipLabel>Information Sources</relationshipLabel>
        <relationshipName>Information_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_of_this_purchase__c</fullName>
        <label>Cost of this purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Migration_Decision__c</fullName>
        <label>Data Migration Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Migrate Data</fullName>
                </value>
                <value>
                    <fullName>Archive Data</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Migration_Status__c</fullName>
        <label>Data Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Planning In Progress</fullName>
                </value>
                <value>
                    <fullName>Migration In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_years__c</fullName>
        <label>Duration (years)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERIM_Submission_Date__c</fullName>
        <label>ERIM Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GXP_Risk_Level__c</fullName>
        <label>GXP Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Division_Name__c</fullName>
        <label>Group Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Regulatory Affairs</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Shared Services (IT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Sub_Division_Name__c</fullName>
        <label>Group Sub-Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting_Internal_or_External__c</fullName>
        <label>Hosting  (Internal or External)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosting_Location__c</fullName>
        <label>Hosting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Source_New_Custom_Field_H__c</fullName>
        <label>No Licenses/ HW of Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Sub_Type__c</fullName>
        <label>Information Sub - Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Information_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Non-Relational</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Sharepoint</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Dropbox</fullName>
                </value>
                <value>
                    <fullName>Sharefle</fullName>
                </value>
                <value>
                    <fullName>Documentum</fullName>
                </value>
                <value>
                    <fullName>Three Tier Client Server</fullName>
                </value>
                <value>
                    <fullName>Three Tier Web Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Type__c</fullName>
        <label>Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infrastructure_Server_Name__c</fullName>
        <label>Infrastructure(Server Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Mechanism__c</fullName>
        <label>Integration Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Support_Personnel__c</fullName>
        <label>No. of Support Personnel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <label>No. of Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Licenses__c</fullName>
        <label>Number of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Costs__c</fullName>
        <label>Operating Costs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low &lt; $50K/year</fullName>
                </value>
                <value>
                    <fullName>Medium &gt; $50K/year and &lt; $250K/year</fullName>
                </value>
                <value>
                    <fullName>High &gt; $250K/year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Owning</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Information Sources (Account)</relationshipLabel>
        <relationshipName>Information_Sources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAST_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAST ID#</label>
        <referenceTo>Information_Landscape__c</referenceTo>
        <relationshipLabel>Information Sources</relationshipLabel>
        <relationshipName>Information_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Authority__c</fullName>
        <label>Regulatory Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GxP</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Indicator__c</fullName>
        <label>Regulatory Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLP</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>GMP</fullName>
                </value>
                <value>
                    <fullName>non-GxP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDLC_Classification__c</fullName>
        <label>SDLC Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Configurable</fullName>
                </value>
                <value>
                    <fullName>COTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Content__c</fullName>
        <label>Source Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Structured</fullName>
                </value>
                <value>
                    <fullName>Semi-structured</fullName>
                </value>
                <value>
                    <fullName>Unstructured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Description__c</fullName>
        <label>Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDP_Information_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Decommissioning_Indicator__c</fullName>
        <label>Target Decommissioning Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_2017_OpEx__c</fullName>
        <label>Total (2017) = OpEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_2018_2019_OpEx__c</fullName>
        <label>Total (2018 - 2019) OpEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_All_Yrs_OpEx__c</fullName>
        <label>Total (All Yrs) = OpEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_System_Yes_No__c</fullName>
        <label>Validated System? (Yes / No)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Information Sources</relationshipLabel>
        <relationshipName>Information_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Information Sources (Vendor)</relationshipLabel>
        <relationshipName>Information_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>